# tpuz

./: CLAUDE.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: deploy.yaml  publish.yaml  test.yaml
docs/: Gemfile  _config.yml  best-practices.md  getting-started.md  gpu.md  guide.md  index.md  secrets.md
docs/_layouts/: default.html  home.html  page.html
docs/assets/css/: style.css
tests/: test_tpu.py
tpuz/: __init__.py  audit.py  cli.py  costs.py  gce.py  gcs.py  health.py  launcher.py  notify.py  profiles.py  secrets.py  tpu.py
