[project]
name = "tpuz"
version = "0.1.0"
description = "Manage GCP TPU VMs from your terminal — create, run, recover, teardown"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Taha Bouhsine" },
]
keywords = ["tpu", "gcp", "jax", "distributed", "training", "cloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tpuz = "tpuz.cli:main"

[project.urls]
Homepage = "https://github.com/tahabsn/tpuz"
Issues = "https://github.com/tahabsn/tpuz/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
