[project]
name = "tpuz"
dynamic = ["version"]
description = "Manage GCP TPU VMs from your terminal — create, run, recover, teardown"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Taha Bouhsine" },
]
keywords = ["tpu", "gcp", "jax", "distributed", "training", "cloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tpuz = "tpuz.cli:main"

[project.urls]
Homepage = "https://github.com/mlnomadpy/tpuz"
Issues = "https://github.com/mlnomadpy/tpuz/issues"

[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
